# MagabeParser

./: .gitignore  CMakeLists.txt  build.sh  config.cmake  main.cpp
core/: context.h  parser.cpp  parser.h
